src/test/deca/context/valid/def_affect/affect-int.deca
// Description:
//    Affectation d'un entier.
//
// Resultats:
//    a = 3

{
    int a = 3;
}