src/test/deca/context/invalid/def_affect/affect-int-string.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: Affectation de types incompatibles.

{
   int a;

   // Doit etre refuse.
   a = "bonjour";
}
